--- a/style.css
+++ b/style.css
@@ -163,6 +163,22 @@ ul.topnav li{
     list-style: none;
     float: left;
 }
+
+
+#search{
+    height: 40px;
+    margin:auto;
+    border: none;
+    border-radius: 8rem;
+    box-shadow: 2px 3px 2px 3px rgba(0,0,0,.15),
+    2px 3px 3px 3px rgba(0,0,0,.1);
+    position: relative;
+    left: 50%;
+    width: 200%;
+    padding-left: 10%;
+    
+}
+
 ul.topnav li.topnav_right{
     float: right;
 }
@@ -235,6 +251,20 @@ ul.topnav li.dropdownIcon{
     .col-3{
         width: 100%;
         margin: 0;
+    }
+    #search{
+       left: 10%;
+       width: 75%;
+       padding-left: 5%;
+    }
+    .list_container{
+       
+        width: 100%;
+       
+       
+    }
+    .list.searchon li{
+        margin: unset;
     }
 }
 /*###############################*/
@@ -420,4 +450,48 @@ div.box2:hover .product_picture{
 }
 button.buy_icon:hover{
     background-color: #6fddee;;
+}
+
+ul.list{
+    display: none;
+}
+ul.list.searchon {
+   display: block;
+   margin: auto;
+   text-decoration: none;
+   list-style-type: none;
+   width: 100%;
+   
+   
+   
+}
+ul.list.searchon li{
+    
+    text-decoration: none;
+    position: relative;
+    padding-bottom: 15px;
+    padding-top: 10px;
+    /*padding-left: 7.5%;*/
+    font-size: 13px;
+    font-weight: 500;
+    border-radius: 5%;
+    color: black;
+    
+}
+div.list_container{
+    background-color: white;
+    display: block;
+    margin: auto;
+    width: 30%;
+    border-radius: 5%;
+   
+}
+.list.searchon li a {
+    color: black;
+    text-decoration: none;
+}
+.list.searchon li a:hover{
+    color: #17a2b8;
+    
+    
 }
